[gd_scene load_steps=6 format=3 uid="uid://dg4p3hsiqtxq2"]

[ext_resource type="Script" path="res://gathering_unit.gd" id="1_a6ni3"]
[ext_resource type="Texture2D" uid="uid://byew07yex5j5k" path="res://carpenter.png" id="2_fbypp"]
[ext_resource type="Texture2D" uid="uid://kdotsphloq42" path="res://coins.png" id="3_ho4n4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spvlx"]
bg_color = Color(0.241156, 0.241156, 0.241156, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n08rl"]
bg_color = Color(0.435192, 0.435192, 0.435192, 1)
border_color = Color(0.497474, 0.497474, 0.497473, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="gathering_unit" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -840.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_spvlx")
script = ExtResource("1_a6ni3")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 216.0
alignment = 1

[node name="title" type="HBoxContainer" parent="vbox"]
layout_mode = 2
alignment = 1

[node name="UNIT_IMG" type="TextureRect" parent="vbox/title"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_fbypp")
expand_mode = 2

[node name="UNIT_NAME" type="Label" parent="vbox/title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 55
text = "UNIT_NAME
"

[node name="MarginContainer" type="MarginContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="vbox/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n08rl")

[node name="MarginContainer" type="MarginContainer" parent="vbox/MarginContainer/Panel"]
layout_mode = 2
offset_right = 1060.0
offset_bottom = 115.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="vbox/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="UNIT_IMG" type="TextureRect" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_fbypp")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="UNIT_DESC" type="RichTextLabel" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
text = "UNIT_DESC
"
fit_content = true
scroll_active = false

[node name="UNIT_HOWMUCH" type="RichTextLabel" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "This (UNIT_NAME) is making (INCOME) (IMG) per turn"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="B_UPGRADE" type="Button" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "(PRICE) Upgrade"
icon = ExtResource("3_ho4n4")

[node name="B_CVG" type="Button" parent="vbox/MarginContainer/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Show coverage
"
